# backend

./: .env.example  Dockerfile  all_files_dump.txt  docker-compose.yml  dumpf.sh  pyproject.toml  requirements.txt  run.py  setup-ssl.sh
alembic/: env.py
alembic/versions/: 2025_04_18_1455-38a010ca8987_init_db.py  2025_04_18_1551-b1f130aba27b_add_match_table.py  2025_04_18_1612-a598b6bf79e3_add_likes_ans_notification_tables.py  2025_04_18_1747-bc063aa68da7_add_metadata_to_user.py  2025_04_18_1926-d363e080604d_add_metadata_to_user.py  2025_05_19_0033-84a5c47647d6_initial_migration.py
app/: projectConfig.py
bot/: __init__.py  config.py  main.py
bot/handlers/: __init__.py  ai_chat.py  matches.py  menu.py  notifications.py  profile.py  search.py  start.py
bot/keyboards/: ai_chat_kb.py  main_kb.py  matches_kb.py  profile_kb.py  search_kb.py  start_kb.py
bot/middlewares/: __init__.py  auth.py
bot/services/: ai_service.py  database.py  match_service.py  user_service.py
bot/states/: ai_chat_states.py  auth_states.py  profile_states.py  search_states.py
src/: main.py
src/api_v1/ai_assistant/: routes.py  schemas.py
src/api_v1/ai_matching/: crud.py  routes.py  schemas.py
src/api_v1/auth/: crud.py  routes.py  schemas.py
src/api_v1/like/: crud.py  routes.py  schemas.py
src/api_v1/match/: routes.py  schemas.py
src/api_v1/user/: routes.py  schemas.py
src/core/data/: __init__.py  config.py
src/core/database/: __init__.py
src/core/database/alchemy_models/: base.py  like.py  match.py  message.py  notification.py  user.py
src/core/database/helpers/: postgres_helper.py
src/core/utils/: AIAssistantService.py  AIMatchingService.py
