[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ITSDENISSKA",email = "fotiev.d1991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
scalar-fastapi = "^1.0.3"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.9.0"
uvicorn = "^0.34.1"
itsdangerous = "^2.2.0"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
psycopg = "^3.2.6"
greenlet = "^3.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
